create get_all_menu_by_function_package
