# internal/routers/menu/menu_router.go
@@ -22,6 +22,7 @@ func (ar *MenuRouter) InitAdminRouter(Router *gin.RouterGroup) {
 		menuRouterPrivate.GET("/get_menu_by_id/:id", menu.Menus.GetMenuById)
 		menuRouterPrivate.PUT("/update_multiple_menu/", menu.Menus.EditMenuById)
 		menuRouterPrivate.DELETE("/delete/:id", menu.Menus.DeleteMenu)
+		menuRouterPrivate.GET("/get_all_menu_by_function_package", menu.Menus.GetAllMenuByRoleId)
 	}
 
 }
